[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cesmii-profile-validator"
version = "0.1.0"
description = "Validate JSON payloads against CESMII Smart Manufacturing Profile definitions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "CESMII Community"}
]
keywords = ["cesmii", "smart-manufacturing", "opc-ua", "json-ld", "validation", "mqtt", "uns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/eukodyne/cesmii"
Documentation = "https://github.com/eukodyne/cesmii#readme"
Repository = "https://github.com/eukodyne/cesmii"
Issues = "https://github.com/eukodyne/cesmii/issues"

[tool.setuptools.packages.find]
include = ["cesmii_validator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
